<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tsibato</string>
    <string name="action_settings">Φίλτρα</string>
    <string name="action_share">Μοιράσου</string>
    <string name="action_search">Ψάξε</string>
    <string name="action_clear_history">Καθαρισμός ιστορικού</string>
    <string name="loading_msg">Φόρτωση&#8230;</string>
    <string name="failed_msg">Παρουσιάστηκε σφάλμα. Ελέγξτε τη σύνδεση στο Internet!</string>
    <string name="no_connection">Δεν υπάρχει σύνδεση</string>
    <string name="list_empty_text">Δε βρέθηκαν αποτελέσματα</string>
    <string name="euro_symbol">&#8364;</string>
    <string name="from_value">από</string>
    <string name="count_first">ΒΛΕΠΕΙΣ</string>
    <string name="deals_text">προσφορές</string>
    <string name="percent">&#37;</string>
    <string name="shareTitle">Μοιράσου το</string>
    <string name="shareVia">via tsibato.gr</string>
    <string name="search_hint">Αναζήτηση</string>
    <string name="clear_history_dialog">Σίγουρα θέλετε να σβήσετε το ιστορικό αναζητήσεων σας;</string>
    <string name="city_title">Πόλη / Περιοχή</string>
    <string name="category_title">Κατηγορίες:</string>
    <string name="select_all_categories">Επιλογή όλων</string>
    <string name="deselect_all_categories">Αποεπιλογή όλων</string>
    <string name="select_categories_alert">Παρακαλώ επιλέξτε τουλάχιστον μια κατηγορία!</string>
    <string name="settings_cancel">Ακύρωση</string>
    <string name="settings_ok">OK</string>
    <string name="tutorial_ok">OK!</string>
    <string name="update_title">Update available</string>
    <string name="update_text">An update for Tsibato is available!\n\nUpdate from Google Play Store?</string>

</resources>